crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__app_src_main_kotlin_shop_app_checkout_CheckoutConfig_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "app/src/main/kotlin/shop/app/checkout/CheckoutConfig.kt",
  "package": "shop.app.checkout",
  "declarations": [
    {
      "kind": "object",
      "name": "CheckoutConfig",
      "line": 3,
      "children": [
        {
          "kind": "val",
          "name": "currency",
          "line": 4,
          "modifiers": [
            "const"
          ],
          "return_type": "String"
        },
        {
          "kind": "val",
          "name": "maxItems",
          "line": 5,
          "modifiers": [
            "const"
          ],
          "return_type": "Int"
        }
      ]
    }
  ]
}
