crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__app_src_main_kotlin_shop_app_checkout_CheckoutService_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "app/src/main/kotlin/shop/app/checkout/CheckoutService.kt",
  "package": "shop.app.checkout",
  "imports": [
    "shop.app.reporting.AuditTrail",
    "shop.order.Order",
    "shop.order.OrderId",
    "shop.order.OrderRepository"
  ],
  "declarations": [
    {
      "kind": "class",
      "name": "CheckoutService",
      "line": 8,
      "parameters": [
        {
          "name": "repository",
          "type_name": "OrderRepository",
          "property": {
            "visibility": "private",
            "mutable": false
          }
        },
        {
          "name": "auditTrail",
          "type_name": "AuditTrail",
          "property": {
            "visibility": "private",
            "mutable": false
          }
        }
      ],
      "children": [
        {
          "kind": "function",
          "name": "placeOrder",
          "line": 12,
          "parameters": [
            {
              "name": "order",
              "type_name": "Order"
            }
          ],
          "return_type": "OrderId"
        }
      ]
    }
  ]
}
