crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__app_src_main_kotlin_shop_app_checkout_OrderImporter_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "app/src/main/kotlin/shop/app/checkout/OrderImporter.kt",
  "package": "shop.app.checkout",
  "imports": [
    "shop.db.InMemoryOrderRepository",
    "shop.order.Order",
    "shop.order.OrderRepository"
  ],
  "declarations": [
    {
      "kind": "class",
      "name": "OrderImporter",
      "line": 7,
      "parameters": [
        {
          "name": "repository",
          "type_name": "OrderRepository",
          "default": "InMemoryOrderRepository()",
          "property": {
            "visibility": "private",
            "mutable": false
          }
        }
      ],
      "children": [
        {
          "kind": "function",
          "name": "importAll",
          "line": 8,
          "parameters": [
            {
              "name": "orders",
              "type_name": "List<Order>"
            }
          ],
          "return_type": "Int"
        }
      ]
    }
  ]
}
