crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__app_src_main_kotlin_shop_app_reporting_AuditTrail_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "app/src/main/kotlin/shop/app/reporting/AuditTrail.kt",
  "package": "shop.app.reporting",
  "declarations": [
    {
      "kind": "class",
      "name": "AuditTrail",
      "line": 3,
      "children": [
        {
          "kind": "val",
          "name": "entries",
          "line": 4,
          "visibility": "private",
          "type_inferred": true
        },
        {
          "kind": "function",
          "name": "record",
          "line": 6,
          "parameters": [
            {
              "name": "message",
              "type_name": "String"
            }
          ]
        },
        {
          "kind": "function",
          "name": "all",
          "line": 10,
          "return_type": "List<String>"
        }
      ]
    }
  ]
}
