crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__core_src_main_kotlin_shop_order_OrderRepository_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "core/src/main/kotlin/shop/order/OrderRepository.kt",
  "package": "shop.order",
  "declarations": [
    {
      "kind": "interface",
      "name": "OrderRepository",
      "line": 3,
      "children": [
        {
          "kind": "function",
          "name": "save",
          "line": 4,
          "parameters": [
            {
              "name": "order",
              "type_name": "Order"
            }
          ],
          "return_type": "OrderId"
        },
        {
          "kind": "function",
          "name": "findById",
          "line": 6,
          "parameters": [
            {
              "name": "id",
              "type_name": "OrderId"
            }
          ],
          "return_type": "Order?"
        }
      ]
    }
  ]
}
