crates/ktsense-cli/tests/snapshots/outline_snapshots__json__multi_module__core_src_main_kotlin_shop_order_Order_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
{
  "path": "core/src/main/kotlin/shop/order/Order.kt",
  "package": "shop.order",
  "declarations": [
    {
      "kind": "class",
      "name": "OrderId",
      "line": 3,
      "modifiers": [
        "data"
      ],
      "parameters": [
        {
          "name": "value",
          "type_name": "Long",
          "property": {
            "mutable": false
          }
        }
      ]
    },
    {
      "kind": "class",
      "name": "Order",
      "line": 5,
      "modifiers": [
        "data"
      ],
      "parameters": [
        {
          "name": "id",
          "type_name": "OrderId",
          "property": {
            "mutable": false
          }
        },
        {
          "name": "customerEmail",
          "type_name": "String",
          "property": {
            "mutable": false
          }
        },
        {
          "name": "totalCents",
          "type_name": "Long",
          "property": {
            "mutable": false
          }
        }
      ]
    },
    {
      "kind": "function",
      "name": "blankToNull",
      "receiver": "String?",
      "line": 11,
      "visibility": "internal",
      "return_type": "String?"
    }
  ]
}
